[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab~=4.0", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyter_ai_blablador"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.1.0"
description = "A Jupyter AI extension."
authors = [
    { name = "Jens Henrik Goebbert", email = "j.goebbert@fz-juelich.de" },
]
dependencies = ["jupyter_ai"]

[project.optional-dependencies]
test = ["coverage", "pytest", "pytest-asyncio", "pytest-cov"]

[project.entry-points."jupyter_ai.model_providers"]
blablador = "jupyter_ai_blablador.provider:BlabladorProvider"
blablador-chat = "jupyter_ai_blablador.provider:ChatBlabladorProvider"

# [project.entry-points."jupyter_ai.chat_handlers"]
# blablador-slash-command = "jupyter_ai_blablador.slash_command:TestSlashCommand"

[project.entry-points."jupyter_ai.embeddings_model_providers"]
blablador = "jupyter_ai_blablador.provider:BlabladorEmbeddingsProvider"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.hatch.build.hooks.version]
path = "jupyter_ai_blablador/_version.py"

#[tool.hatch.version]
#source = "nodejs"
#
#[tool.hatch.metadata.hooks.nodejs]
#fields = ["description", "authors", "urls"]
#
#[tool.hatch.build.targets.sdist]
#artifacts = ["jupyter_ai_blablador/labextension"]
#exclude = [".github", "binder"]
#
#[tool.hatch.build.targets.wheel.shared-data]
#"jupyter_ai_blablador/labextension" = "share/jupyter/labextensions/@jupyter-ai-blablador/core"
#"install.json" = "share/jupyter/labextensions/@jupyter-ai-blablador/core/install.json"
#"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
#"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"
#
#[tool.hatch.build.hooks.version]
#path = "jupyter_ai_blablador/_version.py"
#
#[tool.hatch.build.hooks.jupyter-builder]
#dependencies = ["hatch-jupyter-builder>=0.5"]
#build-function = "hatch_jupyter_builder.npm_builder"
##ensured-targets = [
##    "jupyter_ai_blablador/labextension/static/style.js",
##    "jupyter_ai_blablador/labextension/package.json",
##]
##skip-if-exists = ["jupyter_ai_blablador/labextension/static/style.js"]
#
#[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
#build_cmd = "build:prod"
#npm = ["jlpm"]
#
#[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
#build_cmd = "install:extension"
#npm = ["jlpm"]
#source_dir = "src"
#build_dir = "jupyter_ai_blablador/labextension"
