[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab~=4.0", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyter_ai_blablador"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.1.0"
description = "A Jupyter AI extension for Blablador."
authors = [
    { name = "Jens Henrik Goebbert", email = "j.goebbert@fz-juelich.de" },
]
dependencies = ["jupyter_ai"]

[project.optional-dependencies]
test = ["coverage", "pytest", "pytest-asyncio", "pytest-cov"]

[project.entry-points."jupyter_ai.model_providers"]
blablador = "jupyter_ai_blablador.provider:BlabladorProvider"
blablador-chat = "jupyter_ai_blablador.provider:ChatBlabladorProvider"

# [project.entry-points."jupyter_ai.chat_handlers"]
# blablador-slash-command = "jupyter_ai_blablador.slash_command:TestSlashCommand"

[project.entry-points."jupyter_ai.embeddings_model_providers"]
blablador-embeddings = "jupyter_ai_blablador.provider:BlabladorEmbeddingsProvider"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.hatch.build.hooks.version]
path = "jupyter_ai_blablador/_version.py"
